--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>AI Bot Backtest: Real Money Performance vs. Estimates #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">25 minutes ago</div>
+                        <div class="date">41 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Sadhguru's Enlightenment Day Satsang – LIVE on 23 September | 7:30 PM IST | 10 AM EDT | 3 PM BST</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>FIX THIS FIRST and your entire swing falls in place (most never realize this)</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Is Attachment a Problem in Relationships? | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2175,7 +2175,7 @@
                     <div class="video-info">
                         <h3>Don sawan sacred island(. The abandoned temple)</h3>
                         <div class="channel">Massimo Nocerino Pizza Massimo</div>
-                        <div class="date">3 weeks ago</div>
+                        <div class="date">4 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -2219,7 +2219,7 @@
                     <div class="video-info">
                         <h3>How I would Start Trading Over Again</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Aug 25, 2025</div>
                     </div>
                 </a>
             </div>
@@ -2230,7 +2230,7 @@
                     <div class="video-info">
                         <h3>I make  Pizzas in the the Thai Temple</h3>
                         <div class="channel">Massimo Nocerino Pizza Massimo</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Aug 25, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5085,7 +5085,7 @@
                         <div class="video-info">
                             <h3>AI Bot Backtest: Real Money Performance vs. Estimates #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">25 minutes ago</div>
+                            <div class="date">41 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5960,7 +5960,7 @@
                         <div class="video-info">
                             <h3>How I would Start Trading Over Again</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Aug 25, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -7264,7 +7264,7 @@
                         <div class="video-info">
                             <h3>Sadhguru's Enlightenment Day Satsang – LIVE on 23 September | 7:30 PM IST | 10 AM EDT | 3 PM BST</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7286,7 +7286,7 @@
                         <div class="video-info">
                             <h3>Is Attachment a Problem in Relationships? | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9080,7 +9080,7 @@
                         <div class="video-info">
                             <h3>Don sawan sacred island(. The abandoned temple)</h3>
                             <div class="channel">Massimo Nocerino Pizza Massimo</div>
-                            <div class="date">3 weeks ago</div>
+                            <div class="date">4 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -9091,7 +9091,7 @@
                         <div class="video-info">
                             <h3>I make  Pizzas in the the Thai Temple</h3>
                             <div class="channel">Massimo Nocerino Pizza Massimo</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Aug 25, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -9405,7 +9405,7 @@
                         <div class="video-info">
                             <h3>FIX THIS FIRST and your entire swing falls in place (most never realize this)</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
