--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>AI Bot Backtest: Real Money Performance vs. Estimates #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">41 minutes ago</div>
+                        <div class="date">49 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -277,7 +277,7 @@
                     <div class="video-info">
                         <h3>How To Trade Like A Casino</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -827,7 +827,7 @@
                     <div class="video-info">
                         <h3>Trading Gives You Hope. Here's Why...</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -1821,7 +1821,7 @@
                     <div class="video-info">
                         <h3>You don't need to predict to profit, here's why...</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">2 weeks ago</div>
+                        <div class="date">3 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5085,7 +5085,7 @@
                         <div class="video-info">
                             <h3>AI Bot Backtest: Real Money Performance vs. Estimates #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">41 minutes ago</div>
+                            <div class="date">49 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5140,7 +5140,7 @@
                         <div class="video-info">
                             <h3>How To Trade Like A Casino</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5371,7 +5371,7 @@
                         <div class="video-info">
                             <h3>Trading Gives You Hope. Here's Why...</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -5804,7 +5804,7 @@
                         <div class="video-info">
                             <h3>You don't need to predict to profit, here's why...</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">2 weeks ago</div>
+                            <div class="date">3 weeks ago</div>
                         </div>
                     </a>
                 </div>
