--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Your Life Is Now, with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">15 minutes ago</div>
+                        <div class="date">26 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Vikkstar, Tobi & Behz on GUMBALL Rally</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -684,7 +684,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on Reclaiming Awe and Wonder</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -827,7 +827,7 @@
                     <div class="video-info">
                         <h3>THE END OF SIDEMEN AMONG US</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -2175,7 +2175,7 @@
                     <div class="video-info">
                         <h3>I Coded a Bitcoin Trading Bot: Simple Scalping Strategy (MQL5 Tutorial)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">3 weeks ago</div>
+                        <div class="date">4 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5960,7 +5960,7 @@
                         <div class="video-info">
                             <h3>I Coded a Bitcoin Trading Bot: Simple Scalping Strategy (MQL5 Tutorial)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">3 weeks ago</div>
+                            <div class="date">4 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7242,7 +7242,7 @@
                         <div class="video-info">
                             <h3>Your Life Is Now, with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">15 minutes ago</div>
+                            <div class="date">26 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7495,7 +7495,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on Reclaiming Awe and Wonder</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9587,7 +9587,7 @@
                         <div class="video-info">
                             <h3>Vikkstar, Tobi & Behz on GUMBALL Rally</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9609,7 +9609,7 @@
                         <div class="video-info">
                             <h3>THE END OF SIDEMEN AMONG US</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
