--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Your Life Is Now, with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">57 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Do More Without Stressing Out | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Sadhguru's Enlightenment Day Satsang – LIVE on 23 September | 7:30 PM IST | 10 AM EDT | 3 PM BST</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -1421,7 +1421,7 @@
                     <div class="video-info">
                         <h3>The moment he figured out the golf swing</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -7242,7 +7242,7 @@
                         <div class="video-info">
                             <h3>Your Life Is Now, with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">57 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7253,7 +7253,7 @@
                         <div class="video-info">
                             <h3>Do More Without Stressing Out | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7286,7 +7286,7 @@
                         <div class="video-info">
                             <h3>Sadhguru's Enlightenment Day Satsang – LIVE on 23 September | 7:30 PM IST | 10 AM EDT | 3 PM BST</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -9449,7 +9449,7 @@
                         <div class="video-info">
                             <h3>The moment he figured out the golf swing</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
