--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Do More Without Stressing Out | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Vikkstar, Tobi & Behz on GUMBALL Rally</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -7253,7 +7253,7 @@
                         <div class="video-info">
                             <h3>Do More Without Stressing Out | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9587,7 +9587,7 @@
                         <div class="video-info">
                             <h3>Vikkstar, Tobi & Behz on GUMBALL Rally</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
