--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Your Life Is Now, with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Do More Without Stressing Out | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -1810,7 +1810,7 @@
                     <div class="video-info">
                         <h3>No Flop Neapolitan Pizza ‼️ 🔥 #pizza #shorts #baking #chef</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">2 weeks ago</div>
+                        <div class="date">3 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -2219,7 +2219,7 @@
                     <div class="video-info">
                         <h3>Vikkstar + Hardstyle 🔥</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Aug 25, 2025</div>
                     </div>
                 </a>
             </div>
@@ -7242,7 +7242,7 @@
                         <div class="video-info">
                             <h3>Your Life Is Now, with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7253,7 +7253,7 @@
                         <div class="video-info">
                             <h3>Do More Without Stressing Out | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8970,7 +8970,7 @@
                         <div class="video-info">
                             <h3>No Flop Neapolitan Pizza ‼️ 🔥 #pizza #shorts #baking #chef</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">2 weeks ago</div>
+                            <div class="date">3 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -9719,7 +9719,7 @@
                         <div class="video-info">
                             <h3>Vikkstar + Hardstyle 🔥</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Aug 25, 2025</div>
                         </div>
                     </a>
                 </div>
