--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>How often do gaps start multi-day trends?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Spirituality - Freeing Your Inner Energy Flow</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Saina Nehwal Plays Badminton with Sadhguru!</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>The Power of Desensitising in Trading</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">13 hours ago</div>
+                        <div class="date">14 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2208,7 +2208,7 @@
                     <div class="video-info">
                         <h3>If you struggle with an INSIDE TAKEAWAY watch this video</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Aug 25, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5107,7 +5107,7 @@
                         <div class="video-info">
                             <h3>How often do gaps start multi-day trends?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5118,7 +5118,7 @@
                         <div class="video-info">
                             <h3>The Power of Desensitising in Trading</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7264,7 +7264,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Spirituality - Freeing Your Inner Energy Flow</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7275,7 +7275,7 @@
                         <div class="video-info">
                             <h3>Saina Nehwal Plays Badminton with Sadhguru!</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">13 hours ago</div>
+                            <div class="date">14 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9515,7 +9515,7 @@
                         <div class="video-info">
                             <h3>If you struggle with an INSIDE TAKEAWAY watch this video</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Aug 25, 2025</div>
                         </div>
                     </a>
                 </div>
