--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>How often do gaps start multi-day trends?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Spirituality - Freeing Your Inner Energy Flow</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Saina Nehwal Plays Badminton with Sadhguru!</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>The Power of Desensitising in Trading</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -574,7 +574,7 @@
                     <div class="video-info">
                         <h3>Week 3 UPDATE: I Am Letting An AI Algo Trade My Money For 30 Days -Can A Robot Beat The Market & Me?</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -805,7 +805,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Strategy Development - 17.09.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5107,7 +5107,7 @@
                         <div class="video-info">
                             <h3>How often do gaps start multi-day trends?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5118,7 +5118,7 @@
                         <div class="video-info">
                             <h3>The Power of Desensitising in Trading</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5272,7 +5272,7 @@
                         <div class="video-info">
                             <h3>Week 3 UPDATE: I Am Letting An AI Algo Trade My Money For 30 Days -Can A Robot Beat The Market & Me?</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5360,7 +5360,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Strategy Development - 17.09.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -7264,7 +7264,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Spirituality - Freeing Your Inner Energy Flow</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7275,7 +7275,7 @@
                         <div class="video-info">
                             <h3>Saina Nehwal Plays Badminton with Sadhguru!</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
