--- a/index.html
+++ b/index.html
@@ -2754,9 +2754,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=P3tOvxBIuWU" target="_blank">
-                    <img src="https://i.ytimg.com/vi/P3tOvxBIuWU/mqdefault.jpg" alt="❌ The #1 Mistake Killing Your Trades (Data Trap!)">
+                    <img src="https://i.ytimg.com/vi/P3tOvxBIuWU/mqdefault.jpg" alt="Avoid These Data Traps Killing Your Trades 📉">
                     <div class="video-info">
-                        <h3>❌ The #1 Mistake Killing Your Trades (Data Trap!)</h3>
+                        <h3>Avoid These Data Traps Killing Your Trades 📉</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
                         <div class="date">Aug 03, 2025</div>
                     </div>
@@ -6121,9 +6121,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=P3tOvxBIuWU" target="_blank">
-                        <img src="https://i.ytimg.com/vi/P3tOvxBIuWU/mqdefault.jpg" alt="❌ The #1 Mistake Killing Your Trades (Data Trap!)">
+                        <img src="https://i.ytimg.com/vi/P3tOvxBIuWU/mqdefault.jpg" alt="Avoid These Data Traps Killing Your Trades 📉">
                         <div class="video-info">
-                            <h3>❌ The #1 Mistake Killing Your Trades (Data Trap!)</h3>
+                            <h3>Avoid These Data Traps Killing Your Trades 📉</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
                             <div class="date">Aug 03, 2025</div>
                         </div>
