--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Trading Emotions: Why Algo Trading Isn't Always Emotionless #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">6 minutes ago</div>
+                        <div class="date">21 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>How To Spot Market Reversals Using These 5 Indicators</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">7 minutes ago</div>
+                        <div class="date">22 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN GUESS THE IMPOSTOR: YOUTUBER EDITION</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>VIKKSTAR IN WORLD’S FASTEST CAR</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">16 hours ago</div>
+                        <div class="date">17 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Master Algo Trading: Automated Strategies & Backtesting Explained #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -332,7 +332,7 @@
                     <div class="video-info">
                         <h3>AI Bot Backtest: Real Money Performance vs. Estimates #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5085,7 +5085,7 @@
                         <div class="video-info">
                             <h3>Trading Emotions: Why Algo Trading Isn't Always Emotionless #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">6 minutes ago</div>
+                            <div class="date">21 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5096,7 +5096,7 @@
                         <div class="video-info">
                             <h3>How To Spot Market Reversals Using These 5 Indicators</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">7 minutes ago</div>
+                            <div class="date">22 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5129,7 +5129,7 @@
                         <div class="video-info">
                             <h3>Master Algo Trading: Automated Strategies & Backtesting Explained #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -5162,7 +5162,7 @@
                         <div class="video-info">
                             <h3>AI Bot Backtest: Real Money Performance vs. Estimates #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9576,7 +9576,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN GUESS THE IMPOSTOR: YOUTUBER EDITION</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9587,7 +9587,7 @@
                         <div class="video-info">
                             <h3>VIKKSTAR IN WORLD’S FASTEST CAR</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">16 hours ago</div>
+                            <div class="date">17 hours ago</div>
                         </div>
                     </a>
                 </div>
