--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Trading Emotions: Why Algo Trading Isn't Always Emotionless #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">42 minutes ago</div>
+                        <div class="date">57 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>How To Spot Market Reversals Using These 5 Indicators</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">43 minutes ago</div>
+                        <div class="date">58 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Vikkstar & Afrojack Headline in Bucharest!</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2263,7 +2263,7 @@
                     <div class="video-info">
                         <h3>Don sawan sacred island(. The abandoned temple)</h3>
                         <div class="channel">Massimo Nocerino Pizza Massimo</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Aug 27, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5085,7 +5085,7 @@
                         <div class="video-info">
                             <h3>Trading Emotions: Why Algo Trading Isn't Always Emotionless #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">42 minutes ago</div>
+                            <div class="date">57 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5096,7 +5096,7 @@
                         <div class="video-info">
                             <h3>How To Spot Market Reversals Using These 5 Indicators</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">43 minutes ago</div>
+                            <div class="date">58 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -9091,7 +9091,7 @@
                         <div class="video-info">
                             <h3>Don sawan sacred island(. The abandoned temple)</h3>
                             <div class="channel">Massimo Nocerino Pizza Massimo</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Aug 27, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -9598,7 +9598,7 @@
                         <div class="video-info">
                             <h3>Vikkstar & Afrojack Headline in Bucharest!</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
